--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="./assets/css/partials/global.css">
-    <link rel="stylesheet" href="additional.css">
+    <link rel="stylesheet" href="./assets/css/additional.css">
     <link rel="stylesheet" href="style.css">
 
     <title>Odo Service</title>
@@ -22,8 +22,6 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container">
-
-
                 <a class="navbar-brand logo" href="#">
                     <img src="./assets/img/header/logo.svg" alt="">
                 </a>
@@ -236,7 +234,11 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Careers</a>
+                            <a class="nav-link" href="#">Careers
+                                <span class="dr-menu-label dr-menu-hiring-label">
+                                    Hiring
+                                </span>
+                            </a>
                         </li>
 
                         <li class="nav-item">
@@ -277,7 +279,7 @@
                                             class="fa fa-external-link"></small> </a></font>
                                 <font class="text-primary">&nbsp;&nbsp;</font>
                             </div>
-                            <h1><span>One-stop</span> destination for all your business needs. </h1>
+                            <h1 id="hero"><span>One-stop</span> destination for all your business needs. </h1>
                             <p>We provide powerful and flexible Odoo solutions that help you transform your vision into
                                 reality.</p>
                             <div class="hero-btn">
@@ -483,6 +485,7 @@
         </section>
         <!-- End service section -->
 
+        <!-- Start customer review section -->
         <section class="customer-review">
             <div class="container">
                 <div class="row">
@@ -552,7 +555,21 @@
                 </div>
             </div>
         </section>
+        <!-- Start customer review section -->
 
+        <section class="contact-section">
+            <div class="container">
+                <div class="home-contact">
+                    <div class="section-content">
+                        <h3>Let's have a talk.</h3>
+                        <p>Don’t be a stranger. Our team is happy to answer all your questions.</p>
+                    </div>
+                    <div class="section-btn">
+                        <a href="#" class="btn btn-primary"><span>Contact Us</span></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- ============End Main Area========== -->
 
@@ -664,6 +681,7 @@
     <script src="./assets/bootstrap/jquery-3.3.1.slim.min.js"></script>
     <script src="./assets/bootstrap/popper.min.js"></script>
     <script src="./assets/bootstrap/bootstrap.min.js"></script>
+    <script src="./custom.js"></script>
 </body>
 
 </html>
